@@ -102,6 +102,19 @@ pod_spelling_system:
     - rv
     - decl
     - stmt
+    - dirname
+    - osname
+    - diag
+    - cflags
+    - fPIC
+    - ld
+    - ldflags
+    - buildname
+    - libs
+    - cxx
+    - shellwords
+    - fbx
+
 
 pod_coverage:
   skip: 0
@@ -114,3 +127,18 @@ pod_coverage:
     - FFI::Platypus::Closure#get_data
     - FFI::Platypus::Closure#add_data
     - FFI::Probe
+    - App::fbx#main
+    - FFI::Build::File::Object#default_suffix
+    - FFI::Build::File::Library#default_suffix
+    - FFI::Build::File::C#cc
+    - FFI::Build::File::C#ld
+    - FFI::Build::File::C#accept_suffix
+    - FFI::Build::File::CXX#cc
+    - FFI::Build::File::CXX#ld
+    - FFI::Build::File::CXX#accept_suffix
+    - FFI::Build::File::Fortran#cc
+    - FFI::Build::File::Fortran#ld
+    - FFI::Build::File::Fortran#accept_suffix
+    - FFI::Build::File::C#build_item
+    - FFI::Build::File::Object#build_item
+    - FFI::Build::MM
