@@ -5,7 +5,7 @@ copyright_holder = Graham Ollis
 copyright_year   = 2015,2016,2017,2018
 version          = 0.68_01
 
-; authordep ExtUtils::MakeMaker 7.14
+; authordep ExtUtils::MakeMaker
 ; authordep Alien::FFI
 
 [@Author::Plicease]
@@ -91,7 +91,7 @@ diag_preamble = |     diag "  $address_sizes" if $address_sizes;
 diag_preamble = |   }
 
 diag_preamble = |   require IPC::Cmd;
-diag_preabmle = |   require Capture::Tiny;
+diag_preamble = |   require Capture::Tiny;
 diag_preamble = |   if(IPC::Cmd::can_run('lsb_release'))
 diag_preamble = |   {
 diag_preamble = |     spacer();
@@ -100,6 +100,11 @@ diag_preamble = |       system 'lsb_release', '-a';
 diag_preamble = |       ();
 diag_preamble = |     });
 diag_preamble = |   }
+
+diag_preamble = |   require FFI::Build::Platform;
+diag_preamble = |   spacer();
+diag_preamble = |   diag "[PLATFORM]\n";
+diag_preamble = |   diag(FFI::Build::Platform->diag);
 
 diag_preamble = | };
 
@@ -115,6 +120,7 @@ remove = bytes
 remove = utf8
 remove = if
 remove = lib
+remove = Cwd
 remove = XSLoader
 remove = File::Spec
 remove = File::Copy
@@ -128,11 +134,15 @@ remove = File::Temp
 remove = Text::ParseWords
 remove = Data::Dumper
 remove = File::Basename
+remove = List::Util
 
 ; comes with Strawberry (only place we use it)
 remove = Win32
 remove = Win32::Process
 remove = Win32API::File
+
+; optional for testing
+remove = Acme::Alien::DontPanic
 
 [Prereqs / ConfigurePrereqs]
 -phase = configure
@@ -182,3 +192,14 @@ contributor = Gregor Herrmann (gregoa)
 contributor = Shlomi Fish (shlomif)
 contributor = Damyan Ivanov
 contributor = Ilya Pavlov (Ilya33)
+
+[PruneFiles]
+match = /tmpbuild\.
+match = \.o$
+match = \.obj$
+match = \.so$
+match = \.dll$
+match = \.dylib$
+match = ^corpus/ffi_build_mm/project1/blib
+match = /_build/
+
