@@ -2,6 +2,15 @@ use strict;
 use warnings;
 use Test::More;
 
+require_ok 'App::fbx';
+require_ok 'FFI::Build';
+require_ok 'FFI::Build::File::Base';
+require_ok 'FFI::Build::File::C';
+require_ok 'FFI::Build::File::CXX';
+require_ok 'FFI::Build::File::Library';
+require_ok 'FFI::Build::File::Object';
+require_ok 'FFI::Build::MM';
+require_ok 'FFI::Build::Platform';
 require_ok 'FFI::Platypus';
 require_ok 'FFI::Platypus::API';
 require_ok 'FFI::Platypus::Buffer';
@@ -24,6 +33,15 @@ require_ok 'FFI::Probe';
 require_ok 'FFI::Probe::Runner';
 require_ok 'FFI::Probe::Runner::Builder';
 require_ok 'FFI::Probe::Runner::Result';
+ok -f 't/app_fbx.t',                                          'test for App::fbx';
+ok -f 't/ffi_build.t',                                        'test for FFI::Build';
+ok -f 't/ffi_build_file_base.t',                              'test for FFI::Build::File::Base';
+ok -f 't/ffi_build_file_c.t',                                 'test for FFI::Build::File::C';
+ok -f 't/ffi_build_file_cxx.t',                               'test for FFI::Build::File::CXX';
+ok -f 't/ffi_build_file_library.t',                           'test for FFI::Build::File::Library';
+ok -f 't/ffi_build_file_object.t',                            'test for FFI::Build::File::Object';
+ok -f 't/ffi_build_mm.t',                                     'test for FFI::Build::MM';
+ok -f 't/ffi_build_platform.t',                               'test for FFI::Build::Platform';
 ok -f 't/ffi_platypus.t',                                     'test for FFI::Platypus';
 ok -f 't/ffi_platypus_api.t',                                 'test for FFI::Platypus::API';
 ok -f 't/ffi_platypus_buffer.t',                              'test for FFI::Platypus::Buffer';
